UtahLiveDataTest/src/objects/FormTable__c.object
<CustomObject>
    <fields>
        <fullName>AwardedPoints__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Awarded Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benefit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Benefit%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CVFNumber__c</fullName>
        <label>CVFNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostFundedByVAWA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost Funded By VAWA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Court__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Court</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPLANATION__c</fullName>
        <label>EXPLANATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FamilyNumber__c</fullName>
        <label>Number of family members</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Detail (FORMS)</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Form Tables</relationshipLabel>
        <relationshipName>Form_Tables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency1__c</fullName>
        <label>Victim/survivor referrals, consultations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency2__c</fullName>
        <label>Meetings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HideEditInReview__c</fullName>
        <formula>Review__r.HideEditBtn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IF(TEXT(Review__r.Status__c) = &apos;Review Completed&apos;,True,False)</inlineHelpText>
        <label>HideEditInReview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOther__c</fullName>
        <formula>IF(CONTAINS(Name__c, &apos;Other&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsOther</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LYPName__c</fullName>
        <label>LYPName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LawEnforcement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Law Enforcement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NightNumber__c</fullName>
        <label>Number of bed nights</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberField__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NumberField</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PercentField__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PercentField</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PossiblePoints__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Possible Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProbationParole__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Probation &amp; Parole</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProgramYearPurchased__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Program Year Purchased</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prosecution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prosecution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReviewStepName__c</fullName>
        <formula>Review__r.ReviewStepName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReviewStepName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review</label>
        <referenceTo>Review__c</referenceTo>
        <relationshipLabel>Form Tables</relationshipLabel>
        <relationshipName>Form_Tables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOURCEDESCRIPTION__c</fullName>
        <label>SOURCE DESCRIPTION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceType__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpecializedUnitFunds__c</fullName>
        <label>Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Law Enforcement</fullName>
                </value>
                <value>
                    <fullName>Prosecution</fullName>
                </value>
                <value>
                    <fullName>Court</fullName>
                </value>
                <value>
                    <fullName>Probation &amp; Parole</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TYPEOFCHANGE__c</fullName>
        <label>TYPE OF CHANGE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TYPEOFEQUIPMENT__c</fullName>
        <label>TYPE OF EQUIPMENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TableName__c</fullName>
        <label>TableName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextField__c</fullName>
        <label>TextField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAgencyHours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total # of Agency Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalBenefitCost__c</fullName>
        <formula>Total__c * Benefit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Benefit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalCostofEquipment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Cost of Equipment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalVAWASalaryBenefit__c</fullName>
        <formula>Total__c+TotalBenefitCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL VAWA (Salary &amp; Benefit)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Unit__c*Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAWAPERSONNELNAME__c</fullName>
        <label>VAWA PERSONNEL NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VFName__c</fullName>
        <label>VFName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSNumber__c</fullName>
        <label>Number of victims/survivors</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VictimServices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Victim Services</label>
        <type>Checkbox</type>
    </fields>
    <label>Form Table</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Edit_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Form__r.Application__r.FormsValidated__c, true, false)</errorConditionFormula>
        <errorMessage>Forms are not editable after validation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SME_Review_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Review__r.ReviewStepName__c = &apos;SME Review&apos;, AwardedPoints__c &gt; PossiblePoints__c, false)</errorConditionFormula>
        <errorMessage>Awarded Points cannot be greater than Possible Points</errorMessage>
    </validationRules>
</CustomObject>